# FIDESlib

./: .gitignore  CMakeLists.txt  FIDESlibConfig.cmake  FIDESlibConfigVersion.cmake  GPUTest.cu  README.md
.devcontainer/: commit_container.sh  dockerfile  readme.md  run_container.sh
bench/: Benchmark.cu  Benchmark.cuh  BootstrapBenchmarks.cu  CiphertextAddBenchmarks.cu  CiphertextModUpModDownBenchmarks.cu  CiphertextMultiplicationBenchmarks.cu  CiphertextRotationBenchmarks.cu  LimbNTTBenchmarks.cu  MatrixVectorMultiplicationBenchmarks.cu  PlaintextMultiplicationBenchmarks.cu  RNSPolyModUpModDownBenchmarks.cu  RNSPolyRescaleBenchmarks.cu
bench/plots/: plot.py
bench/plots/data/: 4090.json  A4500.json  V100.json
custombench/: CMakeLists.txt  reproduce_bench.cu
examples/logistic_regression/: .gitignore  CMakeLists.txt
examples/logistic_regression/data/: mnist.py
examples/logistic_regression/src/: crypt.cpp  crypt.hpp  data.cpp  encoding.cpp  fhe.cpp  fhe.hpp  fides.cu  fides.cuh  main.cu  train.cu
examples/resnet20/: CMakeLists.txt
examples/resnet20/src/: FHEControllerGPU.cu  FHEControllerGPU.cuh  main.cu  stb_image.hpp  utils.hpp
examples/template/: CMakeLists.txt
examples/template/src/: context.hpp  crypt.cu
include/: ConstantsGPU.cuh  CudaUtils.cuh  MatMul.cuh  MatMul.h  ModMult.cuh  NTT.cuh  PolyApprox.cuh  Transformer.cuh  Transpose.cuh
include/CKKS/: ApproxModEval.cuh  Bootstrap.cuh  BootstrapPrecomputation.cuh  Ciphertext.cuh  Context.cuh  Conv.cuh  ElemenwiseBatchKernels.cuh  KeySwitchingKey.cuh  Limb.cuh  LimbPartition.cuh  LinearTransform.cuh  Parameters.cuh  Plaintext.cuh  RNSPoly.cuh  forwardDefs.cuh
include/CKKS/openfhe-interface/: RawCiphertext.cuh
patch/: README.md  install.sh  patch.sh
src/: ConstantsGPU.cu  CudaUtils.cu  MatMul.cpp  MatMul.cu  NTT.cu  PolyApprox.cu  Transformer.cu  Transpose.cu  VectorGPU.cu  parallel_for.cpp  parallel_for.hpp
src/CKKS/: AccumulateBroadcast.cu  ApproxModEval.cu  Bootstrap.cu  Ciphertext.cpp  CoeffsToSlots.cu  Context.cu  Conv.cu  ElemenwiseBatchKernels.cu  KeySwitchingKey.cu  Limb.cu  LimbPartition.cu  LimbPartitionMGPU.cu  LinearTransform.cu  Plaintext.cu  RNSPoly.cpp
src/CKKS/openfhe-interface/: RawCiphertext.cu
src/python/: ExtractEmbeddings.py
test/: BaseTests.cu  CCMMTests.cu  LimbKernelTest.cu  NTTtests.cu  NegacyclicNTTtests.cu  OpenFheInterfaceTests.cu  ParametrizedTest.cuh  PolyApproxTests.cu  RotationTests.cu  TransformerTests.cu  cpuNTT.cpp  cpuNTT_nega.cpp
